--- a/signin_cookies.conf
+++ b/signin_cookies.conf
@@ -1,4 +1,4 @@
-hostname = ifac*.iqiyi.com, *.video.qq.com, daojia.jd.com,api.m.jd.com, *.acfun.cn, *.you.163.com, music.163.com, *.m.163.com, mcs-mimp-web.sf-express.com, sf-integral-sign-in.weixinjia.net, *.smzdm.com, c.tieba.baidu.com, tieba.baidu.com, m.client.10010.com, act.10010.com, node.kg.qq.com, www.52pojie.cn
+hostname = ifac*.iqiyi.com, *.video.qq.com, daojia.jd.com,api.m.jd.com, *.acfun.cn, *.you.163.com, music.163.com, *.m.163.com, mcs-mimp-web.sf-express.com, sf-integral-sign-in.weixinjia.net, *.smzdm.com, c.tieba.baidu.com, tieba.baidu.com, m.client.10010.com, act.10010.com, node.kg.qq.com, www.52pojie.cn, fmapp.chinafamilymart.com.cn
 
 # 京东 cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
@@ -35,3 +35,6 @@ https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-reques
 
 # 吾爱破解 cookie
 https:\/\/www\.52pojie\.cn\/home\.php\?mod=space url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js
+
+# Fa 米家 cookie
+^https?:\/\/fmapp\.chinafamilymart\.com\.cn\/api\/app\/market\/member\/(signin\/usersign|sign\/current) url script-request-header https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/famijia/famijia_checkin.js
