--- a/signin_cookies.conf
+++ b/signin_cookies.conf
@@ -1,4 +1,4 @@
-hostname = ifac*.iqiyi.com, *.video.qq.com, daojia.jd.com,api.m.jd.com, *.acfun.cn, *.you.163.com, music.163.com, *.m.163.com, mcs-mimp-web.sf-express.com, sf-integral-sign-in.weixinjia.net, *.smzdm.com, c.tieba.baidu.com, tieba.baidu.com, m.client.10010.com, act.10010.com, node.kg.qq.com, www.52pojie.cn, fmapp.chinafamilymart.com.cn
+hostname = ifac*.iqiyi.com, *.video.qq.com, daojia.jd.com,api.m.jd.com, *.acfun.cn, *.you.163.com, music.163.com, *.m.163.com, mcs-mimp-web.sf-express.com, sf-integral-sign-in.weixinjia.net, *.smzdm.com, c.tieba.baidu.com, tieba.baidu.com, m.client.10010.com, act.10010.com, node.kg.qq.com, www.52pojie.cn, fmapp.chinafamilymart.com.cn, api.didialift.com,bosp-api.xiaojukeji.com,as.xiaojukeji.com,manhattan.webapp.xiaojukeji.com,*.diditaxi.com.cn
 
 # 京东 cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
@@ -38,3 +38,15 @@ https:\/\/www\.52pojie\.cn\/home\.php\?mod=space url script-request-header https
 
 # Fa 米家 cookie
 ^https?:\/\/fmapp\.chinafamilymart\.com\.cn\/api\/app\/market\/member\/(signin\/usersign|sign\/current) url script-request-header https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/famijia/famijia_checkin.js
+
+# 滴滴出行每日自动签到
+# 获取Token
+^https?:\/\/api\.didialift\.com\/beatles\/userapi\/user\/user\/getuserinfo?.*city_id=(\d+).*&token=([^&]*) url script-request-header https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/didichuxing/didi_checkin.js
+# 获取Ticket(备用，无法获取Token时尝试)
+^https?:\/\/as\.xiaojukeji\.com\/ep\/as\/toggles\?.*location_cityid=(\d+).*&ticket=([^&]*) url script-request-header https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/didichuxing/didi_checkin.js
+# 获取LotteryId
+^https?:\/\/bosp-api\.xiaojukeji\.com\/bosp-api\/lottery\/info?.*lid=([^&]*) url script-request-header https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/didichuxing/didi_checkin.js
+# 获取ActivityId与ChannelId
+^https?:\/\/pay\.diditaxi\.com\.cn\/web_wallet\/v2\/wallet\/home url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/didichuxing/didi_checkin.js
+# 获取GroupId
+^https?:\/\/bosp-api\.xiaojukeji\.com\/wechat\/benefit\/public\/v2\/index url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/didichuxing/didi_checkin.js
