--- a/signin_cookies.conf
+++ b/signin_cookies.conf
@@ -1,4 +1,4 @@
-hostname = ifac*.iqiyi.com, *.video.qq.com, daojia.jd.com,api.m.jd.com, *.acfun.cn, *.you.163.com, music.163.com, *.m.163.com, mcs-mimp-web.sf-express.com, sf-integral-sign-in.weixinjia.net, *.smzdm.com, c.tieba.baidu.com, tieba.baidu.com, m.client.10010.com, act.10010.com, node.kg.qq.com, www.52pojie.cn, fmapp.chinafamilymart.com.cn, api.didialift.com,bosp-api.xiaojukeji.com,as.xiaojukeji.com,manhattan.webapp.xiaojukeji.com,*.diditaxi.com.cn
+hostname = ifac*.iqiyi.com, *.video.qq.com, daojia.jd.com,api.m.jd.com, *.acfun.cn, *.you.163.com, music.163.com, *.m.163.com, mcs-mimp-web.sf-express.com, sf-integral-sign-in.weixinjia.net, *.smzdm.com, c.tieba.baidu.com, tieba.baidu.com, m.client.10010.com, act.10010.com, node.kg.qq.com, www.52pojie.cn, fmapp.chinafamilymart.com.cn, api.didialift.com,bosp-api.xiaojukeji.com,as.xiaojukeji.com,manhattan.webapp.xiaojukeji.com,*.diditaxi.com.cn, *.v2ex.com, zt.wps.cn, note.youdao.com
 
 # 京东 cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
@@ -50,3 +50,12 @@ https:\/\/www\.52pojie\.cn\/home\.php\?mod=space url script-request-header https
 ^https?:\/\/pay\.diditaxi\.com\.cn\/web_wallet\/v2\/wallet\/home url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/didichuxing/didi_checkin.js
 # 获取GroupId
 ^https?:\/\/bosp-api\.xiaojukeji\.com\/wechat\/benefit\/public\/v2\/index url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/didichuxing/didi_checkin.js
+
+# V2EX
+^https:\/\/www\.v2ex\.com\/mission\/daily url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/v2ex/quanx/v2ex.cookie.js
+
+# WPS
+^https:\/\/zt.wps.cn\/2018\/docer_check_in\/api\/act_list url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/wps/wps.cookie.js
+
+# 有道云笔记
+^https:\/\/note.youdao.com\/yws\/mapi\/user\?method=checkin url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/noteyoudao/noteyoudao.cookie.js
