feat: 添加薅羊毛脚本

--- a/signin/cookies.conf
+++ b/signin/cookies.conf
@@ -1,7 +1,4 @@
-hostname = ifac*.iqiyi.com, *.video.qq.com, daojia.jd.com,api.m.jd.com, *.acfun.cn, *.you.163.com, music.163.com, *.m.163.com, mcs-mimp-web.sf-express.com, sf-integral-sign-in.weixinjia.net, *.smzdm.com, c.tieba.baidu.com, tieba.baidu.com, m.client.10010.com, act.10010.com, node.kg.qq.com, www.52pojie.cn, fmapp.chinafamilymart.com.cn, api.didialift.com,bosp-api.xiaojukeji.com,as.xiaojukeji.com,manhattan.webapp.xiaojukeji.com,*.diditaxi.com.cn, *.v2ex.com, zt.wps.cn, note.youdao.com
-
-# 京东 cookie
-https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
+hostname = ifac*.iqiyi.com, *.video.qq.com, *.acfun.cn, *.you.163.com, music.163.com, *.m.163.com, mcs-mimp-web.sf-express.com, sf-integral-sign-in.weixinjia.net, *.smzdm.com, c.tieba.baidu.com, tieba.baidu.com, m.client.10010.com, act.10010.com, node.kg.qq.com, www.52pojie.cn, fmapp.chinafamilymart.com.cn, api.didialift.com,bosp-api.xiaojukeji.com,as.xiaojukeji.com,manhattan.webapp.xiaojukeji.com,*.diditaxi.com.cn, *.v2ex.com, zt.wps.cn, note.youdao.com
 
 # 爱奇艺 cookie
 ^https?:\/\/iface(\d)?\.iqiyi\.com\/ url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
