feat: 添加薅羊毛脚本

--- a/econnoisseur/cookies.conf
+++ b/econnoisseur/cookies.conf
@@ -1,7 +1,4 @@
-hostname = daojia.jd.com,api.m.jd.com, mobile.app.autohome.com.cn,pay.autohome.com.cn,openapi.autohome.com.cn, minapp.xqrobot.net, veishop.iboxpay.com, huodong.fanli.com,passport.fanli.com,gw.fanli.com, nebula.kuaishou.com
-
-# 京东 cookie
-https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
+hostname = mobile.app.autohome.com.cn,pay.autohome.com.cn,openapi.autohome.com.cn, minapp.xqrobot.net, veishop.iboxpay.com, huodong.fanli.com,passport.fanli.com,gw.fanli.com, nebula.kuaishou.com
 
 #汽车之家极速版获取 header
 https:\/\/(mobile\.app\.autohome\.com\.cn\/*||pay\.autohome\.com\.cn\/*||openapi\.autohome\.com\.cn\/*) url script-request-header https://raw.githubusercontent.com/ziye12/QCZJSPEED/master/Task/qczjspeed.js
